--- a/portfolio/public/about/index.html
+++ b/portfolio/public/about/index.html
@@ -1,6 +1,1 @@
-<body>
-    <h1>Emma&#39;s New Hugo Site</h1>
-        <h2>About</h2>
-    <p>This is my About page.</p>
-
-</body>
+<body><h1>Emma's New Hugo Site</h1><h2>About</h2><p>This is my About page.</p></body>
